--- a/resources/angular-material/app/profile/user/user.html
+++ b/resources/angular-material/app/profile/user/user.html
@@ -12,7 +12,7 @@
             </md-tab>
         </md-tabs>
     </md-content>
-    <form ng-submit="$ctrl.addTab(tTitle,tContent)" layout="column" class="md-padding" style="padding-top: 0;">
+    <!--<form ng-submit="$ctrl.addTab(tTitle,tContent)" layout="column" class="md-padding" style="padding-top: 0;">
         <div layout="row" layout-sm="column">
             <div flex style="position: relative;">
                 <h2 class="md-subhead" style="position: absolute; bottom: 0; left: 0; margin: 0; font-weight: 500; text-transform: uppercase; line-height: 35px; white-space: nowrap;">Add a new Tab:</h2>
@@ -27,7 +27,7 @@
             </md-input-container>
             <md-button class="add-tab md-primary md-raised" ng-disabled="!tTitle || !tContent" type="submit" style="margin-right: 0;">Add Tab</md-button>
         </div>
-    </form>
+    </form>-->
 </div>
 
 
